src/test/resources/invalid/typecheck/While_NotBoolean.vas
class Main is
    this() is
        while 4.2 loop
        end
    end
end